@@ -1,12 +1,22 @@
+// This file is responsible for configuring TypeScript compilation (See https://github.com/Microsoft/TypeScript/wiki/tsconfig.json).
 {
+  // compilerOptions - TypeScript to JavaScript compilation options.
   "compilerOptions": {
+    // Do not allow implicit any variables. Force them to be explicitly declared.
     "noImplicitAny": true,
+    // Stop processing on error.
     "noEmitOnError": true,
+    // Do not remove comments.
     "removeComments": false,
+    // Do not create source map files (Leave this to the gulp plugin).
     "sourceMap": false,
+    // Use the Common JS modules.
     "module": "commonjs",
+    // Compile to ECMAScript 5.
     "target": "es5"
   },
+  // exclude - Exclude the bower_components, node_modules and wwwroot folders from being scanned for TypeScript (.ts)
+  // or TypeScript definition (.d.ts) files.
   "exclude": [
     "bower_components",
     "node_modules",
